Sequência da página inicial, +pasta doc para documentos

--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
 	<body>
 		<header>
 			<ol>
-				<li>Início</li>
-				<li>Como funciona</li>
+				<li>MERCURY</li>
 			</ol>
+			<div class="promo">
+				<button>Inscrever-se</button>
+				<h2>
+					Mercury é uma plataforma que visa auxiliar estudantes em sua integração na vida universitária.
+				</h2>
+			</div>
 		</header>
 	</body>
 </html>
