--- a/index.html
+++ b/index.html
@@ -16,5 +16,16 @@
 				</h2>
 			</div>
 		</header>
+		<div class="desc">
+			<p>Mercury é uma plataforma que visa auxiliar estudantes em sua integração na vida universitária.
+				 Através da conciliação das demandas por hospedagem e serviços (por parte dos estudantes) e dos
+				  interesses do mercado imobiliário(por parte de pequenos donos de imóveis), o objetivo é tornar a
+				   inserção universitária mais prática e financeiramente viável.  </p>
+			
+			<p>O propósito do Mercury fora aplicar o conhecimento adquirido ao longo do curso técnico-integrado
+				de Informática para Internet do IFRN numa perspectiva mercadológica e prática. Visto que os
+				 integrantes são pré-universitários, o projeto tenta atuar como uma voz que procura instigar
+				  os indivíduos a atuar nas áreas que conhecem para propor soluções à problemas que conhecem.</p>
+		</div>
 	</body>
 </html>
