--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8"/>
 		<title>Mercury</title>
 		<link rel="stylesheet" href="css/index.css">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
@@ -16,16 +18,30 @@
 				</h2>
 			</div>
 		</header>
-		<div class="desc">
-			<p>Mercury é uma plataforma que visa auxiliar estudantes em sua integração na vida universitária.
-				 Através da conciliação das demandas por hospedagem e serviços (por parte dos estudantes) e dos
-				  interesses do mercado imobiliário(por parte de pequenos donos de imóveis), o objetivo é tornar a
-				   inserção universitária mais prática e financeiramente viável.  </p>
-			
-			<p>O propósito do Mercury fora aplicar o conhecimento adquirido ao longo do curso técnico-integrado
-				de Informática para Internet do IFRN numa perspectiva mercadológica e prática. Visto que os
-				 integrantes são pré-universitários, o projeto tenta atuar como uma voz que procura instigar
-				  os indivíduos a atuar nas áreas que conhecem para propor soluções à problemas que conhecem.</p>
-		</div>
+			<div class="metade">
+				<h1>Como funciona?</h1>
+				<div class="desc">
+					<p>Mercury é uma plataforma que visa auxiliar estudantes em sua integração na vida universitária.
+						Através da conciliação das demandas por hospedagem e serviços (por parte dos estudantes) e dos
+						interesses do mercado imobiliário(por parte de pequenos donos de imóveis), o objetivo é tornar a
+						inserção universitária mais prática e financeiramente viável.</p>
+						
+					<p>O propósito do Mercury fora aplicar o conhecimento adquirido ao longo do curso técnico-integrado
+						de Informática para Internet do IFRN numa perspectiva mercadológica e prática. Visto que os
+						integrantes são pré-universitários, o projeto tenta atuar como uma voz que procura instigar
+						os indivíduos a atuar nas áreas que conhecem para propor soluções à problemas que conhecem.</p>
+				</div>
+			</div>
+			<div class="metade">
+				<div class="item">
+					<img src="img/icons8-casa.png"/><h3>Hospedagem</h3>
+				</div>
+				<div class="item">
+					<img src="img//icons8-comida-2.png"/><h3>Alimentação</h3>
+				</div>
+				<div class="item">
+					<img src="img//icons8-sedan-2.png"/><h3>Transporte</h3>
+				</div>
+			</div>
 	</body>
 </html>
