+Seção 'Simples e direto, sem complicações', algumas mudanças ao css

--- a/index.html
+++ b/index.html
@@ -18,29 +18,58 @@
 				</h2>
 			</div>
 		</header>
-			<div class="metade">
+			<div class="seção">
 				<h1>Como funciona?</h1>
 				<div class="desc">
-					<p>Mercury é uma plataforma que visa auxiliar estudantes em sua integração na vida universitária.
-						Através da conciliação das demandas por hospedagem e serviços (por parte dos estudantes) e dos
+					<p>Mercury é uma plataforma que visa auxiliar estudantes em sua integração na vida universitária.</p>
+					
+					<p>Através da conciliação das demandas por hospedagem e serviços (por parte dos estudantes) e dos
 						interesses do mercado imobiliário(por parte de pequenos donos de imóveis), o objetivo é tornar a
 						inserção universitária mais prática e financeiramente viável.</p>
 						
-					<p>O propósito do Mercury fora aplicar o conhecimento adquirido ao longo do curso técnico-integrado
+					<!--<p>O propósito do Mercury fora aplicar o conhecimento adquirido ao longo do curso técnico-integrado
 						de Informática para Internet do IFRN numa perspectiva mercadológica e prática. Visto que os
 						integrantes são pré-universitários, o projeto tenta atuar como uma voz que procura instigar
-						os indivíduos a atuar nas áreas que conhecem para propor soluções à problemas que conhecem.</p>
+						os indivíduos a atuar nas áreas que conhecem para propor soluções à problemas que conhecem.</p>-->
 				</div>
 			</div>
-			<div class="metade">
+
+			<div class="seção">
 				<div class="item">
-					<img src="img/icons8-casa.png"/><h3>Hospedagem</h3>
+					<img src="img/hospedagem.png"/><h3>Hospedagem</h3>
 				</div>
 				<div class="item">
-					<img src="img//icons8-comida-2.png"/><h3>Alimentação</h3>
+					<img src="img//alimentação.png"/><h3>Alimentação</h3>
 				</div>
 				<div class="item">
-					<img src="img//icons8-sedan-2.png"/><h3>Transporte</h3>
+					<img src="img//transporte.png"/><h3>Transporte</h3>
+				</div>
+				<div class="item">
+					<img src="img//social.png"/><h3>Sociabilidade</h3>
+				</div>
+				<div class="item">
+					<img src="img//wi-fi.png"/><h3>Wi-Fi grátis</h3>
+				</div>
+				<div class="item">
+					<img src="img//estudos.png"/><h3>Ambiente de estudos</h3>
+				</div>
+			</div>
+
+			<div class="laranja">
+				<h1>Simples e direto, sem complicações.</h1>
+				<div class="seção">
+					<img src="img//students-frontpage.png"/><img src="img//students-search.png"/>
+				</div>
+				<div class="seção">
+					<div class="desc">
+						<p>Para estudantes, a interface procura ser completa e de 
+							fácil aquisição, em especial quando já está em algum contrato 
+							com um fornecedor, para a rápida resolução e reajuste de 
+							problemas.</p>
+
+						<p>Há também a busca adaptativa às necessidades do 
+							estudante, que é primordial para a satisfação dos mesmos.</p>
+					</div>
 				</div>
 			</div>
 	</body>
