+Font-weight: 300, +'.seção' para 'section' no css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8"/>
 		<title>Mercury</title>
 		<link rel="stylesheet" href="css/index.css">
-		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Montserrat:300" rel="stylesheet">
 	</head>
 	<body>
 		<header>
@@ -18,7 +18,7 @@
 				</h2>
 			</div>
 		</header>
-			<div class="seção">
+			<section>
 				<h1>Como funciona?</h1>
 				<div class="desc">
 					<p>Mercury é uma plataforma que visa auxiliar estudantes em sua integração na vida universitária.</p>
@@ -32,9 +32,9 @@
 						integrantes são pré-universitários, o projeto tenta atuar como uma voz que procura instigar
 						os indivíduos a atuar nas áreas que conhecem para propor soluções à problemas que conhecem.</p>-->
 				</div>
-			</div>
+			</section>
 
-			<div class="seção">
+			<section>
 				<div class="item">
 					<img src="img/hospedagem.png"/><h3>Hospedagem</h3>
 				</div>
@@ -53,13 +53,13 @@
 				<div class="item">
 					<img src="img//estudos.png"/><h3>Ambiente de estudos</h3>
 				</div>
-			</div>
+			</section>
 
 			<div class="laranja">
-				<div class="seção">
+				<section>
 					<img src="img//students-frontpage.png"/><img src="img//students-search.png"/>
-				</div>
-				<div class="seção">
+				</section>a
+				<section>
 					<h1>Simples e direto, sem complicações.</h1>
 					<div class="desc">
 						<p>Para estudantes, a interface procura ser completa e de 
@@ -70,7 +70,7 @@
 						<p>Há também a busca adaptativa às necessidades do 
 							estudante, que é primordial para a satisfação dos mesmos.</p>
 					</div>
-				</div>
+				</section>
 			</div>
 	</body>
 </html>
