Logo 'MERCURY' de 'ol' para 'h1'

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<ol>
-				<li>MERCURY</li>
-			</ol>
+			<h1>MERCURY</h1>
 			<div class="promo">
 				<button>Inscrever-se</button>
 				<h2>
